kubernetes-monitoring/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
    - name: metrics
      protocol: TCP
      port: 9113
      targetPort: 9113
